--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,22 +6,28 @@
     <string name="action_settings">Settings</string>
     <string name="category">Category</string>
     <string name="title_activity_dish_detail">DishDetailActivity</string>
+    <string name="title_activity_manager_user">ManagerUser</string>
 
     <string name="cheese_ipsum">Jarlsberg lancashire edam. Dolcelatte hard cheese brie st. agur blue
     cheese caerphilly bavarian bergkase cheese and biscuits mascarpone. Cheeseburger swiss bavarian
     bergkase cream cheese fromage frais cheesy feet port-salut airedale. St. agur blue cheese rubber
     cheese caerphilly cheddar cheesecake cream cheese manchego lancashire. Roquefort squirty cheese
     the big cheese.</string>
+
     <string name="checkin">Checkin</string>
     <string name="menu_settings">Settings</string>
-
+    <string name="users">&#xf0c0;</string>
+    <string name="birthdate">&#xf1fd;</string>
     <string name="user_icon">&#xf007;</string>
     <string name="logout_icon">&#xf08b;</string>
     <string name="settings_icon">&#xf013;</string>
     <string name="notif_icon">&#xf0a1;</string>
     <string name="send_icon">&#xf1d8;</string>
-
+    <string name="weight">&#xf267;</string>
+    <string name="height">&#xf1ae;</string>
     <string name="icon_toggle">&#xf0c9;</string>
     <string name="icon_back">&#xf053;</string>
     <string name="icon_microphone">&#xf130;</string>
+    <string name="title_activity_clock">ClockActivity</string>
+
 </resources>
