--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,7 +32,7 @@
     <string name="icon_clock">&#xf017;</string>
     <string name="icon_add">&#xf067;</string>
     <string name="icon_add_cirle">&#xf055;</string>
-
+    <string name="icon_guide">&#xf02d;</string>
     <string name="title_activity_clock">ClockActivity</string>
     <string name="title_activity_sqlash_screen">SqlashScreen</string>
     <string name="title_activity_add_user">AddUser</string>
